# dsv-wrapper

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  debug_show.py  pyproject.toml  requirements.txt  test_actlab_structure.py
dsv_wrapper/: __init__.py  actlab.py  base.py  clickmap.py  client.py  daisy.py  exceptions.py  handledning.py  mail.py  play.py  utils.py
dsv_wrapper/auth/: __init__.py  cache.py  cache_backend.py  shibboleth.py
dsv_wrapper/bot/: __init__.py  events.py  idle_handler.py  mail_bot.py
dsv_wrapper/models/: __init__.py  actlab.py  clickmap.py  common.py  daisy.py  handledning.py  mail.py  play.py
dsv_wrapper/parsers/: __init__.py  actlab.py  daisy.py  handledning.py  play.py
examples/: example_actlab.py  example_async.py  example_async_bot_attachments.py  example_daisy_sync.py  example_handledning_sync.py  example_mail.py  example_mail_bot.py  example_unified_client.py  example_with_env.py
tests/: conftest.py  test_actlab.py  test_auth.py  test_clickmap.py  test_daisy.py  test_daisy_courses.py  test_handledning.py  test_mail.py  test_mail_bot.py  test_models.py  test_play.py
tests/fixtures/daisy/: anstalld_221.html  momentinfo_7619_db.html  momentinfo_7620.html  sokmoment_vt2026_p1.html  sokmoment_vt2026_p4.html
